--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 best_mode1.h5 filter=lfs diff=lfs merge=lfs -text
 best_model1.h5 filter=lfs diff=lfs merge=lfs -text
+.h5 filter=lfs diff=lfs merge=lfs -text
